# SapiSales_project

./: CMakeLists.txt  README.md
sapi_sales/headers/array/: product_array.h  user_array.h
sapi_sales/headers/binary_search_tree/: user_bst.h
sapi_sales/headers/hash/: product_hash.h
sapi_sales/headers/list/: user_list.h
sapi_sales/headers/manager/: lab10.h  lab12.h  lab2.h  lab2_3.h  lab3.h  lab4.h  lab5.h  lab8.h  lab_manager.h
sapi_sales/headers/models/: product.h  user.h  user_array.h
sapi_sales/headers/queue/: user_queue.h
sapi_sales/headers/stack/: product_stack.h
sapi_sales/src/: main.c
sapi_sales/src/array/: product_array.c  user_array.c
sapi_sales/src/binary_search_tree/: user_bst.c
sapi_sales/src/hash/: product_hash.c
sapi_sales/src/list/: user_list.c
sapi_sales/src/manager/: lab10.c  lab12.c  lab2.c  lab2_3.c  lab3.c  lab4.c  lab5.c  lab8.c  lab_manager.c
sapi_sales/src/models/: product.c  user.c  user_array.c
sapi_sales/src/queue/: user_queue.c
sapi_sales/src/stack/: product_stack.c
shared/headers/: errors.h  messages.h  useful.h
shared/src/: errors.c  messages.c
